# rag-int14124-final

./: .gitignore  compare-chunking.py  data.py  domain-specific-rag.py  evaluate-rag-1.py  evaluate-rag.py  extract-raydocs.py  pyproject.toml  simple-rag.ipynb  simple-rag.py  utils.py
__marimo__/: evaluate-rag.ipynb  simple-rag.ipynb
__marimo__/session/: compare-chunking.py.json  domain-specific-rag.py.json  evaluate-rag-1.py.json  evaluate-rag.py.json  simple-rag.py.json
chroma_db/general_evaluation/: chroma.sqlite3
chroma_db/general_questions_db/: chroma.sqlite3
chunker/: __init__.py  base_chunker.py  fixed_token_chunker.py  recursive_token_chunker.py
datasets/: ray_qa.csv  raydocs-generated-queries-and-excerpts.csv
datasets/raydocs_full/: cluster_cli.txt  cluster_configure-manage-dashboard.txt  cluster_faq.txt  cluster_getting-started.txt  cluster_key-concepts.txt  cluster_kubernetes_benchmarks.txt  cluster_kubernetes_benchmarks_memory-scalability-benchmark.txt  cluster_kubernetes_examples.txt  cluster_kubernetes_examples_distributed-checkpointing-with-gcsfuse.txt  cluster_kubernetes_examples_gpu-training-example.txt  cluster_kubernetes_examples_ml-example.txt  cluster_kubernetes_examples_mnist-training-example.txt  cluster_kubernetes_examples_mobilenet-rayservice.txt  cluster_kubernetes_examples_modin-example.txt  cluster_kubernetes_examples_rayjob-batch-inference-example.txt  cluster_kubernetes_examples_vllm-rayservice.txt  (+589 more)
evaluation/: __init__.py  base_eval_set.py  base_evaluation.py  evaluation.py  general_eval_set.py  synthetic_eval_set.py
scripts/: marimo-persist.sh  marimo-remote.sh  setup.sh
(+2 files in other folders)
